--- a/FastDisApp.plist
+++ b/FastDisApp.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://vlinklife.com/irmb.ipa</string>
+					<string>http://www.fyi.net.cn/app/FastDisApp.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>http://vlinklife.com/irmb_icon_large.png</string>
+					<string>http://www.fyi.net.cn/app/FastDisApp_icon_large.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,19 +27,19 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>http://115.28.134.84/irmb_icon_small.png</string>
+					<string>http://www.fyi.net.cn/app/FastDisApp_icon_small.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.td.irmb</string>
+				<string>com.td.FastDisApp</string>
 				<key>bundle-version</key>
-				<string>1.0.2</string>
+				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>irmb</string>
+				<string>∑…∫ËÕ¯≈Ã</string>
 			</dict>
 		</dict>
 	</array>
