--- a/FastDisApp.plist
+++ b/FastDisApp.plist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+ï»¿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>·ÉºèÍøÅÌ</string>
+				<string>é£žé¸¿ç½‘ç›˜</string>
 			</dict>
 		</dict>
 	</array>
